<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scroll" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/secondary_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/azantext"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdbGp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rdbnothing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right"
            android:text="@string/nothing"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|right"
            android:text="@string/default1"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/kheir_begin"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/karanouh_begin"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/kheir_all"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/karanouh_all"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/fayed_all"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/dabliz_all"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/jundi_all"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/ok" />
    </RadioGroup>

</LinearLayout>
</ScrollView>