<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom|clip_horizontal|top|left|center"
    android:background="@drawable/app_background"
    android:gravity="bottom"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="150dp"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:weightSum="10" >
    


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="#77b2d74f"
        android:weightSum="2" >

        <TextView
            android:id="@+id/day"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:width="0px" />

    </TableRow> 

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:weightSum="2" >

        <TextView
            android:id="@+id/fajrTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/fajrTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/fajrtxt"
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:width="0px" />

    </TableRow>
    
        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/sunriseTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/sunriseTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="center|right"
            android:paddingRight="5dp"
            android:text="@string/sunrisetxt"
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:width="0px" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/duhrTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/duhrTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/duhrtxt"
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:width="0px" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/asrTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/asrTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/asrtxt"
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:width="0px" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/magribTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/magribTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/magribtxt"
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:width="0px" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:weightSum="2" >

        <TextView
            android:id="@+id/ishaTime"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="left|center"
            android:paddingLeft="5dp"
            android:text=""
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:textStyle="bold"
            android:width="0px" />

        <TextView
            android:id="@+id/ishaTV"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#77b2d74f"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/ishatxt"
            android:textColor="#2f3d0a"
            android:textSize="21sp"
            android:width="0px" />

    </TableRow>
    
<!--     <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_weight="2"
        android:weightSum="2" >

        <TextView
            android:id="@+id/remaining_time"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="2"
            android:background="#77b2d74f"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:width="0px" />
    </TableRow> -->
</TableLayout>